--- a/Projects/Skills/index.html
+++ b/Projects/Skills/index.html
@@ -9,7 +9,7 @@
 <meta charset="utf-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Prakhar Garg</title>
+<title>Prakhar Garg | Skills</title>
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
 <link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
@@ -99,7 +99,7 @@ Do the following if you're using your customized build of modernizr (http://www.
     <div id="LayoutDiv1">
 		<div class="Image"><p><img src="Project Skills.JPG" width="100%"></p></div>
         <div class="Paragraph">
-			<P>The <a href="http://www.skillsontario.com/"> Skills Robotics Competition</a> was organised by the government of Ontario  to help increase student interest in the skilled trades and robotics. The aim  for this competition was to score balls into a fishing net attached behind and  opposing robot. This was fortunate for me because I had experience building a  robot for a similar competition in 2009. My team and I decided to use what we  learned from the previous competition. However, a significantly lower budget  made it a much larger challenge. Instead of using the high power CIM motors, we  chose to use old DeWalt drills for the robot&rsquo;s drivetrain.</P>
+			<P>The <a href="http://www.skillsontario.com/"> Skills Robotics Competition</a> was organised by the government of Ontario to help increase student interest in the skilled trades and robotics. The aim for this competition was to score balls into a fishing net attached behind and opposing robot. This was fortunate for me because I had experience building a robot for a similar competition in 2009. My team and I decided to use what we learned from the previous competition. However, a significantly lower budget made it a much larger challenge. Instead of using the high power CIM motors, we chose to use old DeWalt drills for the robot’s drivetrain.</P>
 </div>
 	</div>
 
@@ -108,14 +108,14 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div id="LayoutDiv2">
     <div id="NudgeMe" class="Image"><p><img src="image052.jpg" width="847"></p></div>
     <div class="Paragraph">
-      <P>We  choose to use a double wheel shooter to allow the robot to shoot the ball  directly ahead. This helps make it easier to aim the robot when shooting the  ball. Both rollers  were individully driven. This keeps the assembly simple and incase one of the  motor blows, the robot will still be able to eject the balls.</p>
+      <P>We choose to use a double wheel shooter to allow the robot to shoot the ball directly ahead. This helps make it easier to aim the robot when shooting the ball. Both rollers were individually driven. This keeps the assembly simple and in case one of the motor blows, the robot will still be able to eject the balls.</p>
     </div>
   </div>
   
   <div id="LayoutDiv2">
     <div class="Image"><p><img src="image053.jpg" width="479"></p></div>
     <div class="Paragraph">
-      <P>The final robot was a verry fast machine. It was able to  quickly pick up all the balls and put them into their designated goal.  Unfortunately during the competition one of the plywood wheels begun to crack.  That was easily fixed by using some woodglue. We learned to dedicate more  financial resources to the drive system. Even for the short amount of time that  the robot wa immobile, the funtion worked well enough to get a couple of goals  in. This was thanks to us designing the shooter to make full field shots.</P>
+      <P>The final robot was a very fast machine. It was able to quickly pick up all the balls and put them into their designated goal. During the competition one of the plywood wheels begun to crack. That was easily fixed by using some wood glue. We learned to dedicate more financial resources to the drive system. Even for the short amount of time that the robot was immobile, the function worked well enough to get a couple of goals in. This was thanks to us designing the shooter to make full field shots.</P>
     </div>
   </div>
 </div>
