--- a/Projects/Skills/index.html
+++ b/Projects/Skills/index.html
@@ -93,11 +93,11 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 
 <div class="Block" id="Strangers">
-	<h1>Strangers Android Application </h1>
+	<h1>Skills Robotics Competition</h1>
 
 
     <div id="LayoutDiv1">
-		<div class="Image"><p><img src="Project Skills.JPG" width="100%"></p></div>
+		<div class="Image"><p><img src="Project Skills.jpg" width="807"></p></div>
         <div class="Paragraph">
 			<P>The <a href="http://www.skillsontario.com/"> Skills Robotics Competition</a> was organised by the government of Ontario to help increase student interest in the skilled trades and robotics. The aim for this competition was to score balls into a fishing net attached behind and opposing robot. This was fortunate for me because I had experience building a robot for a similar competition in 2009. My team and I decided to use what we learned from the previous competition. However, a significantly lower budget made it a much larger challenge. Instead of using the high power CIM motors, we chose to use old DeWalt drills for the robot’s drivetrain.</P>
 </div>
