Style changes to main page

--- a/index.html
+++ b/index.html
@@ -100,105 +100,131 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 <div name="Interest" class="Block" id="Interest">
   <div class="Title"><h1>Interests</h1></div>
-  <a href="Interests/Origami/index.html" class="Attribute">
-    <h2>
-      Origami
-      <img src="Interests/Origami/Interest Origami.jpg">
-    </h2>
-  </a>
-  <a href="Interests/Travelling/index.html" class="Attribute">
-    <h2>
-      Travelling
-      <img src="Interests/Travelling/Interest Travelling.jpg">
-    </h2>
-  </a>
-  <a href="Interests/Robots/index.html" class="Attribute">
-    <h2>
-      Robots
-      <img src="Interests/Robots/Interest Robot.jpg">
-    </h2>
-  </a>
-  <a href="Interests/Photography/index.html" class="Attribute">
-    <h2>
-      Photography
-	  <img src="Interests/Photography/Interests Photography.jpg">
-    </h2>
-  </a>
+  <div class="Section">
+      <div class="Section">
+          <a href="Interests/Origami/index.html" class="Attribute">
+            <h2>
+              Origami
+              <img src="Interests/Origami/Interest Origami.jpg">
+            </h2>
+          </a>
+          <a href="Interests/Travelling/index.html" class="Attribute">
+            <h2>
+              Travelling
+              <img src="Interests/Travelling/Interest Travelling.jpg">
+            </h2>
+          </a>
+      </div>
+      <div class="Section">
+          <a href="Interests/Robots/index.html" class="Attribute">
+            <h2>
+              Robots
+              <img src="Interests/Robots/Interest Robot.jpg">
+            </h2>
+          </a>
+          <a href="Interests/Photography/index.html" class="Attribute">
+            <h2>
+              Photography
+              <img src="Interests/Photography/Interests Photography.jpg">
+            </h2>
+          </a>
+      </div>
+	</div>
 </div>
 <div name="Project" class="Block" id="Project">
   <div class="Title"><h1>Projects</h1></div>
-  <a href="Projects/EcoCAR/index.html" class="Attribute">
-    <h2>
-      EcoCAR3
-      <img src="Projects/EcoCAR/Project EcoCAR3.jpg">
-    </h2>
-  </a>
-  <a href="Projects/FormulaHybrid/index.html" class="Attribute">
-      <h2>
-        Formula Hybrid
-        <img src="Projects/FormulaHybrid/Project Formula Hybrid.jpg">
-      </h2>
-  </a>
-  <a href="Projects/Strangers/index.html" class="Attribute">
-      <h2>
-        Strangers
-        <img src="Projects/Strangers/Project Strangers.jpg">
-      </h2>
-  </a>
-  <a href="Projects/QuadSim/index.html" class="Attribute">
-      <h2>
-        QuadSim
-        <img src="Projects/QuadSim/Project QuadSIM.JPG">
-      </h2>
-  </a>
-  <a href="Projects/SumoBot/index.html" class="Attribute">  
-  	<h2>
-  		SumoBot 
-    	<img src="Projects/SumoBot/Project SumoBot.jpg">
-  	</h2>
-  </a>
-  <a href="Projects/Class/index.html" class="Attribute">
-      <h2>
-        Class Projects
-        <img src="Projects/Class/Project Class.jpg">
-      </h2>
-  </a>
-  <a href="Projects/FIRST/index.html" class="Attribute">
-      <h2>
-        FIRST Robotics
-        <img src="Projects/FIRST/Project FIRST.jpg">
-      </h2>
-  </a>
-  <a href="Projects/F1/index.html" class="Attribute">
-      <h2>
-        F1 in Schools
-        <img src="Projects/F1/Project F1.jpg">
-      </h2>
-  </a>
-  <a href="Projects/VEX/index.html" class="Attribute">
-      <h2>
-        VEX Robotics
-        <img src="Projects/VEX/Project VEX.jpg">
-      </h2>
-  </a>
-  <a href="Projects/Skills/index.html" class="Attribute">
-      <h2>
-        Skills Robotics
-        <img src="Projects/Skills/Project Skills.jpg">
-      </h2>
-  </a>
+      <div class="Section">
+          <a href="Projects/EcoCAR/index.html" class="Attribute">
+            <h2>
+              EcoCAR3
+              <img src="Projects/EcoCAR/Project EcoCAR3.jpg">
+            </h2>
+          </a>
+          <a href="Projects/FormulaHybrid/index.html" class="Attribute">
+              <h2>
+                Formula Hybrid
+                <img src="Projects/FormulaHybrid/Project Formula Hybrid.jpg">
+              </h2>
+          </a>
+      </div>
+      <div class="Section">
+          <div class="Section">
+              <a href="Projects/Strangers/index.html" class="Attribute">
+                  <h2>
+                    Strangers
+                    <img src="Projects/Strangers/Project Strangers.jpg">
+                  </h2>
+              </a>
+              <a href="Projects/QuadSim/index.html" class="Attribute">
+                  <h2>
+                    QuadSim
+                    <img src="Projects/QuadSim/Project QuadSIM.JPG">
+                  </h2>
+              </a>
+          </div>
+          <div class="Section">
+          <a href="Projects/SumoBot/index.html" class="Attribute">  
+            <h2>
+                SumoBot 
+                <img src="Projects/SumoBot/Project SumoBot.jpg">
+            </h2>
+          </a>
+          <a href="Projects/Class/index.html" class="Attribute">
+              <h2>
+                Class Projects
+                <img src="Projects/Class/Project Class.jpg">
+              </h2>
+          </a>
+          </div>
+      </div>
+  <div class="Section">
+      <div class="Section">
+          <a href="Projects/FIRST/index.html" class="Attribute">
+              <h2>
+                FIRST Robotics
+                <img src="Projects/FIRST/Project FIRST.jpg">
+              </h2>
+          </a>
+          <a href="Projects/F1/index.html" class="Attribute">
+              <h2>
+                F1 in Schools
+                <img src="Projects/F1/Project F1.jpg">
+              </h2>
+          </a>
+      </div>
+      <div class="Section">
+          <a href="Projects/VEX/index.html" class="Attribute">
+              <h2>
+                VEX Robotics
+                <img src="Projects/VEX/Project VEX.jpg">
+              </h2>
+          </a>
+          <a href="Projects/Skills/index.html" class="Attribute">
+              <h2>
+                Skills Robotics
+                <img src="Projects/Skills/Project Skills.jpg">
+              </h2>
+          </a>
+      </div>
+  </div>
 </div>
 <div name="Community" class="Block" id="Community">
   <div class="Title"><h1>Community Involvement</h1></div>
-  <a href="Community/Mentorship/index.html" class="Attribute">
-  	<h2>Mentorship</h2>
-  </a>
-  <a href="Community/Volunteering/index.html" class="Attribute">
-  	<h2>Volunteering</h2>
-  </a>
-  <a href="Community/Alumni/index.html" class="Attribute">
-  	<h2>Alumni Group</h2>
-  </a>
+  <div class="Section">
+      <div class="Section">
+          <a href="Community/Mentorship/index.html" class="Attribute">
+            <h2>Mentorship</h2>
+          </a>
+          <a href="Community/Volunteering/index.html" class="Attribute">
+            <h2>Volunteering</h2>
+          </a>
+      </div>
+      <div class="Section">
+          <a href="Community/Alumni/index.html" class="Attribute">
+            <h2>Alumni Group</h2>
+          </a>
+      </div>
+  </div>
 
 </div>
 <script type="text/javascript">
