--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@ Do the following if you're using your customized build of modernizr (http://www.
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 </head>
 <body>
-<h1 style="color:#FF0000; background-color:#00FF66;">This website is currently under construction</h1>
-<div class="Block">
+<h1 style="	position:fixed;
+			top: 0; 
+			left:0; 
+			width: 100%;
+			height:50px; 
+			color:#FF0000; 
+			background-color:#00FF66;">
+	This website is currently under construction
+</h1>
+<div style="position:fixed; top: 50px; left:0; width: 100%;">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
 		<a href="index.html">
@@ -88,7 +96,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 
       </ul>
     </li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="Contact/index.html">Contact</a></li>
   </ul>
 </div>
 <div name="AboutMe" class="Block" id="AboutMe">
@@ -100,6 +108,8 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div id="AboutMePhoto" Class="Title"><p><img src="11062379_10200468276227128_3031736896492371818_o.jpg" width=100%></p>
 </div>
 </div>
+
+
 <div name="Interest" class="Block" id="Interest">
   <div class="Title"><h1>Interests</h1></div>
   <div class="Section">
