background for projects

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@ Do the following if you're using your customized build of modernizr (http://www.
 			background-color:#00FF66;">
 	This website is currently under construction
 </h1>
-<div style="position:fixed; top: 50px; left:0; width: 100%;">
+<div style="	position:fixed; 
+				top: 50px; 
+				left:0; 
+				width: 100%;">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
 		<a href="index.html">
