--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 </head>
 <body>
 <h1 style="	position:fixed;
-			top: 0; 
+			bottom: 0; 
 			left:0; 
 			width: 100%;
 			height:50px; 
@@ -39,7 +39,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 	This website is currently under construction
 </h1>
 <div style="	position:fixed; 
-				top: 50px; 
+				top: 0px; 
 				left:0; 
 				width: 100%;">
   <ul id="MenuBar1" class="MenuBarHorizontal">
