new section in main

--- a/index.html
+++ b/index.html
@@ -112,7 +112,23 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 </div>
 
-
+<div name="Experience" class="Block" id="Experience">
+  <div class="Title"><h1>Work Experience</h1></div>
+  <div class="Section">
+          <a href="Interests/Origami/index.html" class="Attribute">
+            <h2>
+              Origami
+              <img src="Interests/Origami/Interest Origami.jpg">
+            </h2>
+          </a>
+          <a href="Interests/Travelling/index.html" class="Attribute">
+            <h2>
+              Travelling
+              <img src="Interests/Travelling/Interest Travelling.jpg">
+            </h2>
+          </a>
+  </div>
+</div>
 <div name="Interest" class="Block" id="Interest">
   <div class="Title"><h1>Interests</h1></div>
   <div class="Section">
