--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@ Do the following if you're using your customized build of modernizr (http://www.
 </div>
 </div>
 
-<div name="Experience" class="Block" id="Experience">
+<div name="Work" class="Block" id="Work">
   <div class="Title"><h1>Work Experience</h1></div>
   <div class="Section">
-          <a href="Interests/Origami/index.html" class="Attribute">
+          <a href="Work/CAPREIT/index.html" class="Attribute">
             <h2>
-              Origami
-              <img src="Interests/Origami/Interest Origami.jpg">
+              CAPREIT
+              <img src="Work/CAPREIT/Logo.jpg">
             </h2>
           </a>
-          <a href="Interests/Travelling/index.html" class="Attribute">
+          <a href="Work/CTWorkshop/index.html" class="Attribute">
             <h2>
-              Travelling
-              <img src="Interests/Travelling/Interest Travelling.jpg">
+              Children's Technology Workshop
+              <img src="Work/CTWorkshop/Logo.png">
             </h2>
           </a>
   </div>
