--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@ Do the following if you're using your customized build of modernizr (http://www.
 			</a></li>
 			</ul>
 	</li>
+	<li><a class="MenuBarItemSubmenu" href="#Work" >Work Experience</a>
+		<ul>
+			<li><a href="Work/CAPREIT/index.html">
+				CAPREIT
+			</a></li>
+			<li><a href="Work/CTWorkshop/index.html">
+				Children's technology Workshop
+			</a></li>
+		</ul>
+	</li>
     <li><a class="MenuBarItemSubmenu" href="#Project">Projects</a>
       <ul>
 		<li><a href="Projects/EcoCAR/index.html">
