--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@ Do the following if you're using your customized build of modernizr (http://www.
 			</a></li>
 			</ul>
 	</li>
-	<li><a class="MenuBarItemSubmenu" href="#Work" >Work Experience</a>
+	<li><a class="MenuBarItemSubmenu" href="#Work" >Employment</a>
 		<ul>
 			<li><a href="Work/CAPREIT/index.html">
 				CAPREIT
 			</a></li>
 			<li><a href="Work/CTWorkshop/index.html">
-				Children's technology Workshop
+				Children's Technology Workshop
 			</a></li>
 		</ul>
 	</li>
