I think this is better

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Do the following if you're using your customized build of modernizr (http://www.
           </a>
           <a href="Work/CTWorkshop/index.html" class="Attribute">
             <h2>
-              Children's Technology Workshop
+              Children's Technology <br> Workshop
               <img src="Work/CTWorkshop/Logo.png">
             </h2>
           </a>
@@ -249,6 +249,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       </div>
   </div>
 </div>
+
 <div name="Community" class="Block" id="Community">
   <div class="Title"><h1>Community Involvement</h1></div>
   <div class="Section">
