Section tags fix clean up

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <title>Prakhar Garg | About Me</title>
 <link href="file:///C|/Program%20Files%20(x86)/Adobe/Adobe%20Dreamweaver%20CS6/Configuration/BuiltIn/Fluid%20Grid%20Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="index.css" rel="stylesheet" type="text/css">
+<link href="SharedElements.css" rel="stylesheet" type="text/css">
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
 <!-- 
 To learn more about the conditional comments around the html tags at the top of the file:
@@ -268,10 +269,44 @@ Do the following if you're using your customized build of modernizr (http://www.
           </a>
       </div>
   </div>
-
 </div>
+
+<footer>
+	<div class="ContactInfo">
+		<div>
+			<a href="#" class="Contact">
+				<img src="Contact/linkedin.png">
+			</a>
+			<a href="#" class="Contact">
+				<img src="Contact/github.png">
+			</a>
+			<a href="#" class="Contact">
+				<img src="Contact/challengepost.png">
+			</a>
+			<a href="#" class="Contact">
+				<img src="Contact/google.png">
+			</a>
+			<a href="#" class="Contact">
+				<img src="Contact/hotmail.png">
+			</a>
+			<a href="#" class="Contact">
+				<img src="Contact/twiter.png">
+			</a>
+			<a href="#" class="Contact">
+				<img src="Contact/flickr.png">
+			</a>
+			<a href="#" class="Contact">
+				<img src="Contact/instagram.png">
+			</a>
+		</div>
+	</div>
+	<div class="Credits">
+	</div>
+</footer>
+
+
 <script type="text/javascript">
-var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
+    var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
 </script>
 </body>
 </html>
