--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 			background-color:#00FF66;">
 	This website is currently under construction
 </h1>
-<div style="	position:fixed; 
-				top: 0px; 
-				left:0; 
-				width: 100%;">
+<div class="Menu">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
 		<a href="index.html">
