--- a/Interests/Robots/index.html
+++ b/Interests/Robots/index.html
@@ -9,6 +9,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Prakhar Garg | Robots</title>
+<link href="../../SharedElements.css" rel="stylesheet" type="text/css">
+
 <link href="../../boilerplate.css" rel="stylesheet" type="text/css">
 <link href="index.css" rel="stylesheet" type="text/css">
 <link href="../Interests.css" rel="stylesheet" type="text/css">
@@ -30,57 +32,78 @@ Do the following if you're using your customized build of modernizr (http://www.
 <script src="../../SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 </head>
 <body>
-<div class="gridContainer clearfix">
+<div class="Menu">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
-		<a class="MenuBarItemSubmenu" href="../../index.html">
+		<a href="../../index.html">
 			Home
 		</a>
 	</li>
-    <li><a href="#">Interests</a></li>
-    <li><a class="MenuBarItemSubmenu" href="#">Projects</a>
+    <li><a class="MenuBarItemSubmenu" href="../../index.html#Interest" >Interests</a>
+		<ul>
+			<li><a href="../Origami/index.html">
+				Origami
+			</a></li>
+			<li><a href="../Travelling/index.html">
+				Travelling
+			</a></li>
+			<li><a href="../Robots/index.html">
+				Robots
+			</a></li>
+			<li><a href="../Photography/index.html">
+				Photography
+			</a></li>
+			</ul>
+	</li>
+	<li><a class="MenuBarItemSubmenu" href="../../index.html#Work" >Employment</a>
+		<ul>
+			<li><a href="../../Work/CAPREIT/index.html">
+				CAPREIT
+			</a></li>
+			<li><a href="../../Work/CTWorkshop/index.html">
+				Children's Technology Workshop
+			</a></li>
+		</ul>
+	</li>
+    <li><a class="MenuBarItemSubmenu" href="../../index.html#Project">Projects</a>
       <ul>
-		<li><a href="../EcoCAR/index.html">
+		<li><a href="../../Projects/EcoCAR/index.html">
 			McMaster EcoCar3
 		</a></li>
-		<li><a href="../FormulaHybrid/index.html">
+		<li><a href="../../Projects/FormulaHybrid/index.html">
 			McMaster Formula Hybrid
 		</a></li>
-        <li><a href="../Strangers/index.html">
+        <li><a href="../../Projects/Strangers/index.html">
 			Strangers App
 		</a></li>	
-		<li><a href="../QuadSim/index.html">
+		<li><a href="../../Projects/QuadSim/index.html">
 			QuadSIM
 		</a></li>	
-		<li><a href="../SumoBot/index.html">
+		<li><a href="../../Projects/SumoBot/index.html">
 			SumoBot
 		</a></li>		
-        <li><a class="../MenuBarItemSubmenu" href="#">FIRST Robotics</a>
+        <li><a class="MenuBarItemSubmenu" href="../../Projects/FIRST/index.html">FIRST Robotics</a>
           <ul>
-            <li><a href="#">Blizzard X</a></li>
-            <li><a href="#">Blizzard XI</a></li>
-            <li><a href="#">Blizzard XII</a></li>
-            <li><a href="#">Blizzard XIII</a></li>
+            <li><a href="../../Projects/FIRST/index.html#2009">Blizzard X</a></li>
+            <li><a href="../../Projects/FIRST/index.html#2010">Blizzard XI</a></li>
+            <li><a href="../../Projects/FIRST/index.html#2011">Blizzard XII</a></li>
+            <li><a href="../../Projects/FIRST/index.html#2012">Blizzard XIII</a></li>
           </ul>
         </li>
-        <li><a class="MenuBarItemSubmenu" href="#">VEX Robotics</a>
-          <ul>
-            <li><a href="#">2009</a></li>
-            <li><a href="#">2010</a></li>
-            <li><a href="#">2011</a></li>
-            <li><a href="#">2012</a></li>
-          </ul>
-        </li>
-        <li><a href="http://velocitaracing.weebly.com/">
+        <li><a href="../../Projects/VEX/index.html">
+			VEX Robotics
+		</a></li>
+        <li><a href="../../Projects/F1/index.html">
 				F1 in Schools
 		</a></li>
-        <li><a href="#">Skills Robotics</a></li>
+        <li><a href="../../Projects/Skills/index.html">Skills Robotics</a></li>
 
       </ul>
     </li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="../../Contact/index.html">Contact</a></li>
   </ul>
 </div>
+
 
 <div class="Block">
   <h1>Robotics </h1>
