--- a/Projects/Strangers/index.html
+++ b/Projects/Strangers/index.html
@@ -10,6 +10,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About Prakhar Garg</title>
+<link href="../../SharedElements.css" rel="stylesheet" type="text/css">
 <link href="../../../../../../Program Files (x86)/Adobe/Adobe Dreamweaver CS6/Configuration/BuiltIn/Fluid Grid Layout/boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../projects.css" rel="stylesheet" type="text/css">
 <link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
@@ -30,14 +31,14 @@ Do the following if you're using your customized build of modernizr (http://www.
 <script src="../../SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 </head>
 <body>
-<div class="gridContainer clearfix">
+<div class="Menu">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
 		<a href="../../index.html">
 			Home
 		</a>
 	</li>
-    <li><a class="MenuBarItemSubmenu" href="#Interest" >Interests</a>
+    <li><a class="MenuBarItemSubmenu" href="../../index.html#Interest" >Interests</a>
 		<ul>
 			<li><a href="../../Interests/Origami/index.html">
 				Origami
@@ -53,7 +54,17 @@ Do the following if you're using your customized build of modernizr (http://www.
 			</a></li>
 			</ul>
 	</li>
-    <li><a class="MenuBarItemSubmenu" href="#Project">Projects</a>
+	<li><a class="MenuBarItemSubmenu" href="../../index.html#Work" >Employment</a>
+		<ul>
+			<li><a href="../../Work/CAPREIT/index.html">
+				CAPREIT
+			</a></li>
+			<li><a href="../../Work/CTWorkshop/index.html">
+				Children's Technology Workshop
+			</a></li>
+		</ul>
+	</li>
+    <li><a class="MenuBarItemSubmenu" href="../../index.html#Project">Projects</a>
       <ul>
 		<li><a href="../../Projects/EcoCAR/index.html">
 			McMaster EcoCar3
@@ -70,7 +81,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 		<li><a href="../../Projects/SumoBot/index.html">
 			SumoBot
 		</a></li>		
-        <li><a class="../../MenuBarItemSubmenu" href="Projects/FIRST/index.html">FIRST Robotics</a>
+        <li><a class="MenuBarItemSubmenu" href="../../Projects/FIRST/index.html">FIRST Robotics</a>
           <ul>
             <li><a href="../../Projects/FIRST/index.html#2009">Blizzard X</a></li>
             <li><a href="../../Projects/FIRST/index.html#2010">Blizzard XI</a></li>
@@ -88,7 +99,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 
       </ul>
     </li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="../../Contact/index.html">Contact</a></li>
   </ul>
 </div>
 
@@ -114,7 +125,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div id="LayoutDiv2">
     <div class="Image"><p><img src="Project Strangers.jpg" width="100%"></p></div>
     <div class="Paragraph">
-      <P>Future plans for the application involved creating a more intuitive interface with improved branding. Furthermore we wanted to have the app passively block offensive content or anything that violated our terms of use. This social experiment would help us understand how well people will opposite personalities interact with each other and provide insight into potential problems or advantages. You can view our source code and androids app on the group's <a href="https://github.com/SNavleen/Stranger">Git</a></P></div>
+      <P>Future plans for the application involved creating a more intuitive interface with improved branding. Furthermore we wanted to have the app passively block offensive content or anything that violated our terms of use. This social experiment would help us understand how well people will opposite personalities interact with each other and provide insight into potential problems or advantages. You can view our source code and androids app on the group's <a href="../../https://github.com/SNavleen/Stranger">Git</a></P></div>
   </div>
 </div>
 <script type="text/javascript">
