--- a/Work/CTWorkshop/index.html
+++ b/Work/CTWorkshop/index.html
@@ -105,40 +105,43 @@ Do the following if you're using your customized build of modernizr (http://www.
   </ul>
 </div>
 
-<div class="Block" id="TopBlock">
-  <h1>CAPREIT (Canadian Appartment Properties Realestate Investment Trust)</h1>
-  <h3>Summer - 2013, 2014</h3>
+<div class="Block" id="TopBLock">
+  <h1>Children's Technology Workshop</h1>
+  <h3>Summer - 2012, 2013</h3>
+
     <div id="LayoutDiv1">
 		<div class="Image"><p><img src="Logo.gif"></p></div>
         <div class="Description">
 			<h2>Job Description</h2>
 			<ul>
-				<li>Imaging and customizing PC’s and laptops</li>
-				<li>Support head office users for printer supplies</li>
-				<li>Inventory documentation and reconciliation</li>
-				<li>Help Desk support calls</li>
-				<li>Other duties as may be assigned</li>
+				<li>Plans, develops, leads and evaluates a variety of camp programs.</li>
+				<li>Organizes, implements and oversees activities and events according to the timetable and curriculum provided.</li>
+				<li>Takes action to deal with incidents, problems and emergencies and parent concerns in accordance with camp policy.</li>
+				<li>Serve as a positive role model to the campers.</li>
+				<li>responsible for the well being of all the campers and coworkers.</li>
+				<li>Maintain regular commnication about the camp's progress with the parents and the supervisor.</li>
 			</ul>
         </div>
 		<div class="KSA">
 			<h2>Knowledge, Skills and Abilities</h2>
 			<ul>
-				<li>Strong PC skills</li>
-				<li>Good analytical skills</li>
+				<li>Experience working with and troubleshooting technology.</li>
+				<li>Able to work with children</li>
 				<li>Good interpersonal skills</li>
+				<li>Excillent comunication and organisational skills</li>
 			</ul>
         </div>
 		        <div class="Goals">
 			<h2>Goals, Success Factors</h2>
 			<ul>
-				<li>Completion of assigned tasks in a timely manner</li>
-				<li>Ability to manage competing deadlines</li>
+				<li>Ability to manage 24 kids</li>
+				<li>Ensure the happyness of every camper</li>
 			</ul>
         </div>
 		<div class="Reflection">
 			<h2>Reflection</h2>
 			<p>
-				I am responsible for assisting the IT Support staff with any necessary task. This usually involves repairing broken computers and printers, disposing of old machines, and assisting in upgrading machines at CAPREIT's regional sites. One of my biggest accomplishment this year was to be able take calls and actively help users over the phone. this was a great experience because it helped me enhance my communication skills. I became more comfortable talking to strangers and immediately helping them out. 
+				As my first real job, this was a great experience. I enjoyed working with the children and found great pleasure in sharing my passion for technology with them. I learned a lot about raking responsibility and resolving conflicts. 
 			</p>
 		</div>
 	</div>
