style chanes to interests

--- a/index.html
+++ b/index.html
@@ -272,28 +272,28 @@ Do the following if you're using your customized build of modernizr (http://www.
 	<div class="ContactInfo">
 		<h1>Contact me</h1>
 		<div>
-			<a href="#" class="Contact">
+			<a href="https://ca.linkedin.com/pub/prakhar-garg/58/3aa/924" class="Contact">
 				<img src="Contact/linkedin.png">
 			</a>
-			<a href="#" class="Contact">
+			<a href="https://github.com/PG188" class="Contact">
 				<img src="Contact/github.png">
 			</a>
-			<a href="#" class="Contact">
+			<a href="http://devpost.com/software/search?query=%40Pg188" class="Contact">
 				<img src="Contact/challengepost.png">
 			</a>
-			<a href="#" class="Contact">
+			<a href="https://plus.google.com/u/0/115406905534142946941/posts" class="Contact">
 				<img src="Contact/google.png">
 			</a>
-			<a href="#" class="Contact">
+			<a href="mailto:prakhar@live.ca" class="Contact">
 				<img src="Contact/hotmail.png">
 			</a>
-			<a href="#" class="Contact">
+			<a href="https://twitter.com/prakhargarg5" class="Contact">
 				<img src="Contact/twiter.png">
 			</a>
-			<a href="#" class="Contact">
+			<a href="https://www.flickr.com/photos/133001206@N08/" class="Contact">
 				<img src="Contact/flickr.png">
 			</a>
-			<a href="#" class="Contact">
+			<a href="https://instagram.com/keeping_it_pg/" class="Contact">
 				<img src="Contact/instagram.png">
 			</a>
 		</div>
