--- a/Interests/Origami/index.html
+++ b/Interests/Origami/index.html
@@ -11,7 +11,7 @@
 <title>Origami</title>
 <link href="index.css" rel="stylesheet" type="text/css">
 <link href="../Interests.css" rel="stylesheet" type="text/css">
-<link href="../../SharedElements.css" rel="stylesheet" type="text/css">
+<!--<link href="../../SharedElements.css" rel="stylesheet" type="text/css">-->
 <link href="../../boilerplate.css" rel="stylesheet" type="text/css">
 <link href="../../SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
 <script src="../../SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
