interest style sheet still nto working

--- a/Interests/Origami/index.html
+++ b/Interests/Origami/index.html
@@ -91,7 +91,7 @@
 
 <div class="Block">
   <h1>Origami</h1>
-  <object width="400" height="300"> 
+  <object> 
       <param name="flashvars" value="offsite=true&lang=en-us&page_show_url=%2Fphotos%2F133001206%40N08%2Fsets%2F72157655404778998%2Fshow%2F&page_show_back_url=%2Fphotos%2F133001206%40N08%2Fsets%2F72157655404778998%2F&set_id=72157655404778998&jump_to="></param> 
       <param name="movie" value="https://www.flickr.com/apps/slideshow/show.swf?v=1811922554"></param> 
       <param name="allowFullScreen" value="true"></param>
@@ -99,8 +99,8 @@
       	<p>
         	looks like you don't have flash on this device. Click here to view the models. 
         </p>
-        <iframe src="https://www.flickr.com/photos/133001206@N08/sets/72157655404778998#" width="100%" height="300px">
-        </iframe>
+    <!--    <iframe src="https://www.flickr.com/photos/133001206@N08/sets/72157655404778998#" width="100%" height="300px">
+        </iframe>-->
       </embed>
   </object>
 </div>
