Linked alumni group to macfirst

--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@ Do the following if you're using your customized build of modernizr (http://www.
           </a>
       </div>
       <div class="Section">
-          <a href="Community/Alumni/index.html" class="Attribute">
+         <!-- <a href="Community/Alumni/index.html" class="Attribute"> -->
+         <a href="www.macfirst.ca" class="Attribute">
             <h2>Alumni Group</h2>
           </a>
       </div>
