--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Do the following if you're using your customized build of modernizr (http://www.
       </div>
       <div class="Section">
          <!-- <a href="Community/Alumni/index.html" class="Attribute"> -->
-         <a href="www.macfirst.ca" class="Attribute">
+         <a href="http://www.macfirst.ca" class="Attribute">
             <h2>Alumni Group</h2>
           </a>
       </div>
