--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   <div class="Text">
 	<p>I am a student of McMaster Univarsity, studying Mechatronics Engineering. I have a passion for technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my past accomplishments and expand my knowledge on web development.</p></div>
   </div>
-  <div id="AboutMePhoto" Class="Title"><p><img src="11062379_10200468276227128_3031736896492371818_o.jpg" width=100%></p>
+  <div id="AboutMePhoto" Class="Title"><p><img src="MeHeadShot.gif" width=100%></p>
 </div>
 </div>
 
