--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 	<div class="Credits">
 		<h1>Credits</h1>
 		<p>
-			I would like to make a shoutout to everyone who has helped me in the creation of this website and the many projects that I have been a part of. All the content displayed on this website, with the exception to the logos of the organisations, companies and competitions, have been created by me. I however could not have accomplished this without the support of my friends, family and mentors.
+			I would like to make a shoutout to everyone who has helped me in the creation of this website and the many projects that I have been a part of. All the content displayed on this website, with the exception to the logos of the organisations, companies and competitions, have been created by me with the exception of the photo of myself which was curtsey of Alpha Creation Studios. I however could not have accomplished this without the support of my friends, family and mentors.
 		</p>
 	</div>
 </footer>
