--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div id="AboutMeText">
   <div class="Title"><h1> About Me </h1></div>
   <div class="Text">
-	<p>I am a student of McMaster Univarsity, studying Mechatronics Engineering. I have a passion for technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my past accomplishments and expand my knowledge on web development.</p></div>
+	<p>I am a student of McMaster University, studying Mechatronics Engineering. I have a passion for technology and innovation. My years of experience in robotics had helped me grow as an engineer and a person. The purpose of this website is to share some of my past accomplishments and expand my knowledge on web development.</p></div>
   </div>
   <div id="AboutMePhoto" Class="Title"><p><img src="MeHeadShot.gif" width=100%></p>
 </div>
