minor style changes in projects

--- a/Projects/Class/index.html
+++ b/Projects/Class/index.html
@@ -117,6 +117,7 @@ Do the following if you're using your customized build of modernizr (http://www.
 
     
   <div id="LayoutDiv2">
+    <h2> Analog to Digital Converter</h2>
     <div id="NudgeMe" class="Image">
       <p><img src="Project Class.jpg"></p>
     </div>
@@ -134,6 +135,7 @@ Do the following if you're using your customized build of modernizr (http://www.
   </div>
   
   <div id="LayoutDiv2">
+    <h2>CD Drive </h2>
     <div class="Image"><p><img src="render.jpg" width="100%"></p></div>
     <div class="Paragraph">
       <P>Similarly I have worked on projects related to designing and manufacturing mechanical parts for a CD Drive. The simulation and design of this particular project was done on Autodesk Inventor and MapleSim. Once the design was validated, a prototype was manufactured on a RepRap 3D printer and tested. The project helped me learn a lot about the modeling and simulation capabilities of MapleSim.</P></div>
