added photos to robots

--- a/Interests/Travelling/index.html
+++ b/Interests/Travelling/index.html
@@ -108,7 +108,11 @@ Do the following if you're using your customized build of modernizr (http://www.
 <div class="Block">
   <h1>Travelling</h1>
   <p> The following map displays a geotag of all the places I have travelled to.</p>
-  <iframe src="https://www.google.com/maps/d/embed?mid=zya9LE4D6mZY.kgkn0RCzu1IQ" width="95%" height="480"></iframe>
+  <iframe
+		height = "500px"
+		width = "900px"
+		src="https://www.google.com/maps/d/embed?mid=zya9LE4D6mZY.kgkn0RCzu1IQ">
+	</iframe>
 </div>
 
         
