need to fill out attributes about house

--- a/HouseForSale/index.html
+++ b/HouseForSale/index.html
@@ -60,9 +60,7 @@ You can download it from http://leaverou.github.com/prefixfree/ -->
 				<img src="Images/5.JPG"/>
 			</div>
 	  </div>
-	  <p Class="Asking">
-	    Asking price: $------
-	  </p>
+
 	  <p class="intro">
 		This bungalow in West Hamilton is based in the neighborhood of Anslie
 		Wood. The 6 bedroom, 2 bathroom property is situated on the HSR bus
@@ -74,8 +72,127 @@ You can download it from http://leaverou.github.com/prefixfree/ -->
 		attending McMaster University. Shingles: 7 years, AC: 5 years, Water
 		heater: 3 years owned, Driveway: 5 cars
 	  </p>
-
+	  <p Class="Asking">
+	    Asking price: $------
+	  </p>
+	  <h2> Rooms and Sizes </h2>
+	  <table>
+	    <tr>
+		  <td>Living:</td>
+		  <td>---</td>
+		  <td>Bedroom 1:</td>
+		  <td>---</td>
+		</tr>
+	    <tr>
+		  <td>Dining:</td>
+		  <td>---</td>
+		  <td>Bedroom 2:</td>
+		  <td>---</td>
+		</tr> 
+	    <tr>
+		  <td>Kitchen:</td>
+		  <td>---</td>
+		  <td>Bedroom 3:</td>
+		  <td>---</td>
+		</tr> 
+	    <tr>
+		  <td>Bathroom 1:</td>
+		  <td>---</td>
+		  <td>Bedroom 4:</td>
+		  <td>---</td>
+		</tr>
+	    <tr>
+		  <td>Bathroom 2:</td>
+		  <td>---</td>
+		  <td>Bedroom 5:</td>
+		  <td>---</td>
+		</tr> 
+	    <tr>
+		  <td></td>
+		  <td></td>
+		  <td>Bedroom 6:</td>
+		  <td>---</td>
+		</tr> 
+	  </table>
+	  <h2>Property Details</h2>
+	  <table>
+	    <tr>
+		  <td>UFFI:</td>
+		  <td>---</td>
+		  <td>Lot Size:</td>
+		  <td>---</td>
+		  <td>Fireplaces:</td>
+		  <td>---</td>
+		</tr> 
+	    <tr>
+		  <td>Taxes:</td>
+		  <td>---</td>
+		  <td>Property Size:</td>
+		  <td>---</td>
+		  <td></td>
+		  <td></td>
+		</tr>
+	    <tr>
+		  <td>Type of Ownership:</td>
+		  <td>---</td>
+		  <td>Basement:</td>
+		  <td>---</td>
+		  <td>Heating:</td>
+		  <td>---</td>
+		</tr>
+	    <tr>
+		  <td>Parking:</td>
+		  <td>---</td>
+		  <td></td>
+		  <td></td>
+		  <td>Fuel:</td>
+		  <td>---</td>
+		</tr>
+		  <td>Rental Eqmt:</td>
+		  <td>---</td>
+		  <td></td>
+		  <td></td>
+		  <td>Water Supply:</td>
+		  <td>---</td>
+		</tr>
+		  <td>Exterior/Const:</td>
+		  <td>---</td>
+		  <td></td>
+		  <td></td>
+		  <td>Water Meter:</td>
+		  <td>---</td>
+		</tr>
+		  <td>Topography:</td>
+		  <td>---</td>
+		  <td></td>
+		  <td></td>
+		  <td>Sewer Type:</td>
+		  <td>---</td>
+		</tr>
+		  <td>Restrictions:</td>
+		  <td>---</td>
+		  <td>Waterfront:</td>
+		  <td>N</td>
+		  <td>Pool:</td>
+		  <td>N</td>
+		</tr>
+		  <td>Foundation:</td>
+		  <td>---</td>
+		  <td></td>
+		  <td></td>
+		  <td>Frontage:</td>
+		  <td>---</td>
+		</tr>
+		  <td>School:</td>
+		  <td>McMaster University</td>
+		  <td>Survey Avail:</td>
+		  <td></td>
+		  <td>Amps:</td>
+		  <td>---</td>
+		</tr>
+	  </table>
 	  
+	  <h2> Contact Information</h2>
 	  
 	  
 	</div>
