--- a/HouseForSale/index.html
+++ b/HouseForSale/index.html
@@ -72,9 +72,42 @@ You can download it from http://leaverou.github.com/prefixfree/ -->
 		attending McMaster University. Shingles: 7 years, AC: 5 years, Water
 		heater: 3 years owned, Driveway: 5 cars
 	  </p>
+
 	  <p Class="Asking">
 	    Asking price: $------
 	  </p>
+	  <table>
+	    <tr>
+		  <td>Prop Type:</td>
+		  <td>---</td>
+		  <td> # of Rooms</td>
+		  <td></td>
+		</tr>
+	    <tr>
+		  <td>Type/Style:</td>
+		  <td>---</td>
+		  <td> # of Bedrooms</td>
+		  <td></td>
+		</tr>
+	    <tr>
+		  <td>District:</td>
+		  <td>---</td>
+		  <td>Zoning:</td>
+		  <td></td>
+		</tr>
+	    <tr>
+		  <td>Near:</td>
+		  <td>---</td>
+		  <td>Baths 2-pieces:</td>
+		  <td>---</td>
+		</tr>
+	    <tr>
+		  <td>Legal:</td>
+		  <td>---</td>
+		  <td>Baths 3-pieces:</td>
+		  <td>---</td>
+		</tr>
+	  </table>	  
 	  <h2> Rooms and Sizes </h2>
 	  <table>
 	    <tr>
