thinks its almost done

--- a/HouseForSale/index.html
+++ b/HouseForSale/index.html
@@ -76,151 +76,151 @@ You can download it from http://leaverou.github.com/prefixfree/ -->
 	  <p Class="Asking">
 	    Asking price: $------
 	  </p>
-	  <table>
+	  <table class="about">
 	    <tr>
-		  <td>Prop Type:</td>
+		  <td class="property">Prop Type:</td>
 		  <td>---</td>
-		  <td> # of Rooms</td>
+		  <td class="property"> # of Rooms</td>
 		  <td></td>
 		</tr>
 	    <tr>
-		  <td>Type/Style:</td>
+		  <td class="property">Type/Style:</td>
 		  <td>---</td>
-		  <td> # of Bedrooms</td>
+		  <td class="property"> # of Bedrooms</td>
 		  <td></td>
 		</tr>
 	    <tr>
-		  <td>District:</td>
+		  <td class="property">District:</td>
 		  <td>---</td>
-		  <td>Zoning:</td>
+		  <td class="property">Zoning:</td>
 		  <td></td>
 		</tr>
 	    <tr>
-		  <td>Near:</td>
+		  <td class="property">Near:</td>
 		  <td>---</td>
-		  <td>Baths 2-pieces:</td>
+		  <td class="property">Baths 2-pieces:</td>
 		  <td>---</td>
 		</tr>
 	    <tr>
-		  <td>Legal:</td>
+		  <td class="property">Legal:</td>
 		  <td>---</td>
-		  <td>Baths 3-pieces:</td>
+		  <td class="property">Baths 3-pieces:</td>
 		  <td>---</td>
 		</tr>
 	  </table>	  
 	  <h2> Rooms and Sizes </h2>
-	  <table>
+	  <table class="sizes">
 	    <tr>
-		  <td>Living:</td>
+		  <td class="property">Living:</td>
 		  <td>---</td>
-		  <td>Bedroom 1:</td>
+		  <td class="property">Bedroom 1:</td>
 		  <td>---</td>
 		</tr>
 	    <tr>
-		  <td>Dining:</td>
+		  <td class="property">Dining:</td>
 		  <td>---</td>
-		  <td>Bedroom 2:</td>
-		  <td>---</td>
-		</tr> 
-	    <tr>
-		  <td>Kitchen:</td>
-		  <td>---</td>
-		  <td>Bedroom 3:</td>
+		  <td class="property">Bedroom 2:</td>
 		  <td>---</td>
 		</tr> 
 	    <tr>
-		  <td>Bathroom 1:</td>
+		  <td class="property">Kitchen:</td>
 		  <td>---</td>
-		  <td>Bedroom 4:</td>
+		  <td class="property">Bedroom 3:</td>
+		  <td>---</td>
+		</tr> 
+	    <tr>
+		  <td class="property">Bathroom 1:</td>
+		  <td>---</td>
+		  <td class="property">Bedroom 4:</td>
 		  <td>---</td>
 		</tr>
 	    <tr>
-		  <td>Bathroom 2:</td>
+		  <td class="property">Bathroom 2:</td>
 		  <td>---</td>
-		  <td>Bedroom 5:</td>
+		  <td class="property">Bedroom 5:</td>
 		  <td>---</td>
 		</tr> 
 	    <tr>
+		  <td class="property"></td>
 		  <td></td>
-		  <td></td>
-		  <td>Bedroom 6:</td>
+		  <td class="property">Bedroom 6:</td>
 		  <td>---</td>
 		</tr> 
 	  </table>
-	  <h2>Property Details</h2>
-	  <table>
+	  <h2 class="property">Property Details</h2>
+	  <table class="details">
 	    <tr>
-		  <td>UFFI:</td>
+		  <td class="property">UFFI:</td>
 		  <td>---</td>
-		  <td>Lot Size:</td>
+		  <td class="property">Lot Size:</td>
 		  <td>---</td>
-		  <td>Fireplaces:</td>
+		  <td class="property">Fireplaces:</td>
 		  <td>---</td>
 		</tr> 
 	    <tr>
-		  <td>Taxes:</td>
+		  <td class="property">Taxes:</td>
 		  <td>---</td>
-		  <td>Property Size:</td>
+		  <td class="property">Property Size:</td>
 		  <td>---</td>
-		  <td></td>
+		  <td class="property"></td>
 		  <td></td>
 		</tr>
 	    <tr>
-		  <td>Type of Ownership:</td>
+		  <td class="property">Type of Ownership:</td>
 		  <td>---</td>
-		  <td>Basement:</td>
+		  <td class="property">Basement:</td>
 		  <td>---</td>
-		  <td>Heating:</td>
+		  <td class="property">Heating:</td>
 		  <td>---</td>
 		</tr>
 	    <tr>
-		  <td>Parking:</td>
+		  <td class="property">Parking:</td>
 		  <td>---</td>
+		  <td class="property"></td>
 		  <td></td>
-		  <td></td>
-		  <td>Fuel:</td>
+		  <td class="property">Fuel:</td>
 		  <td>---</td>
 		</tr>
-		  <td>Rental Eqmt:</td>
+		  <td class="property">Rental Eqmt:</td>
 		  <td>---</td>
+		  <td class="property"></td>
 		  <td></td>
-		  <td></td>
-		  <td>Water Supply:</td>
+		  <td class="property">Water Supply:</td>
 		  <td>---</td>
 		</tr>
-		  <td>Exterior/Const:</td>
+		  <td class="property">Exterior/Const:</td>
 		  <td>---</td>
+		  <td class="property"></td>
 		  <td></td>
-		  <td></td>
-		  <td>Water Meter:</td>
+		  <td class="property">Water Meter:</td>
 		  <td>---</td>
 		</tr>
-		  <td>Topography:</td>
+		  <td class="property">Topography:</td>
 		  <td>---</td>
+		  <td class="property"></td>
 		  <td></td>
-		  <td></td>
-		  <td>Sewer Type:</td>
+		  <td class="property">Sewer Type:</td>
 		  <td>---</td>
 		</tr>
-		  <td>Restrictions:</td>
+		  <td class="property">Restrictions:</td>
 		  <td>---</td>
-		  <td>Waterfront:</td>
+		  <td class="property">Waterfront:</td>
 		  <td>N</td>
-		  <td>Pool:</td>
+		  <td class="property">Pool:</td>
 		  <td>N</td>
 		</tr>
-		  <td>Foundation:</td>
+		  <td class="property">Foundation:</td>
 		  <td>---</td>
+		  <td class="property"></td>
 		  <td></td>
-		  <td></td>
-		  <td>Frontage:</td>
+		  <td class="property">Frontage:</td>
 		  <td>---</td>
 		</tr>
-		  <td>School:</td>
+		  <td class="property">School:</td>
 		  <td>McMaster University</td>
-		  <td>Survey Avail:</td>
+		  <td class="property">Survey Avail:</td>
 		  <td></td>
-		  <td>Amps:</td>
+		  <td class="property">Amps:</td>
 		  <td>---</td>
 		</tr>
 	  </table>
