--- a/HouseForSale/index.html
+++ b/HouseForSale/index.html
@@ -65,7 +65,7 @@ You can download it from http://leaverou.github.com/prefixfree/ -->
 		This bungalow in West Hamilton is based in the neighborhood of Anslie
 		Wood. The 6 bedroom, 2 bathroom property is situated on the HSR bus
 		route at a convenient location near Fortinos, St. Marry’s catholic
-		school and McMaster University. It is situates in a quiet
+		school and McMaster University. It is situated in a quiet
 		neighborhood around families and students alike. It boasts a newly
 		built basement with its own kitchenette and separate (rear) entrance.
 		Perfect for first time owners, investors or anyone with family 
